--- a/docs/page_principal/styles.css
+++ b/docs/page_principal/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: url('../assets/image-main.png') no-repeat center center fixed;
+    background: url('../../assets/image-main.png') no-repeat center center fixed;
     background-size: cover;
     font-family: Arial, sans-serif;
 }
