--- a/docs/page_cadastro/cadastro.css
+++ b/docs/page_cadastro/cadastro.css
@@ -20,13 +20,13 @@ form {
     width: 300px; 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     flex-direction: column;
-    align-items: center; /* Centraliza o conteúdo do formulário horizontalmente */
+    align-items: center;
 }
 
 h1 {
     color: #AF1111;
-    text-align: center; /* Centraliza o texto dentro do <h1> */
-    margin-bottom: 20px; /* Espaço abaixo do <h1> */
+    text-align: center; 
+    margin-bottom: 20px;
 }
 
 label {
@@ -43,7 +43,7 @@ input[type="password"] {
     border-radius: 4px;
 }
 
-input[type="submit"] {
+.btn-submit {
     background-color: #AF1111;
     color: white;
     border: none;
@@ -52,21 +52,23 @@ input[type="submit"] {
     cursor: pointer;
     font-size: 16px;
     margin-top: 10px;
+    text-decoration: none;
+
 }
 
-input[type="submit"]:hover {
+.btn-submit:hover {
     background-color: #ff5858; 
 }
 
 .radio-group {
     display: flex;
-    justify-content: center; /* Centraliza os botões de rádio */
-    gap: 10px; /* Espaçamento entre os botões de rádio */
-    margin: 10px 0; /* Espaçamento vertical */
+    justify-content: center; 
+    gap: 10px; 
+    margin: 10px 0; 
 }
 
 .form-actions {
     display: flex;
-    justify-content: center; /* Centraliza o botão de submit */
+    justify-content: center; 
     width: 100%;
 }
