--- a/historico-mobile.css
+++ b/historico-mobile.css
@@ -54,3 +54,143 @@ div#duvidas_frequentes{
 footer{
     font-size: small;
 }
+
+/* ---Modal--- */
+
+/* Modal */
+
+.modal {
+
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #000000;
+    background-color: #00000041;
+
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid black;
+    width: 60%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover, .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* Modal */
+
+#form {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #ffffff90;
+    border-radius: 10px;
+    padding: 60px;
+    width: 300px;
+    align-items: center;
+    color: #e65555;
+    border: 2px solid #e65555;
+    animation: iniciar 1.6s ease-out;
+    pointer-events: all;
+}
+
+.title {
+    font-size: 1.8em;
+    margin-bottom: 10%;
+}
+
+#logo-user {
+    width: 24px;
+    height: 24px;
+}
+
+#logo-mail {
+    width: 24px;
+    height: 24px;
+}
+
+#logo-key {
+    width: 24px;
+    height: 24px;
+}
+
+#logo-lock {
+    width: 24px;
+    height: 24px;
+}
+
+.input {
+    min-width: 280px;
+    border-radius: 22px;
+    border: 2px #e65555 solid;
+    padding: 5px;
+    margin: 0px 0px 12px -5px;
+}
+
+.input img {
+    width: 2em !important;
+    height: 2em !important;
+    padding: 5px;
+}
+
+.input input {
+    border: none;
+    outline: none;
+    background-color: #ffffff00;
+    font-family: 'Poppins', sans-serif;
+    transform: translateY(10%);
+    color: #e65555;
+    font-size: lipt;
+}
+
+#btn {
+    margin-top: 10%;
+    width: 100%;
+    text-align: center;
+}
+
+#btn button {
+    font-family: 'Poppins' sans-serif;
+    background: #e65555;
+    width: 100%;
+    height: 40px;
+    border: none;
+    font-size: 1.2em;
+    color: white;
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+}
+
+#btn button:hover {
+    background: #af3333;
+}
+
+p {
+    color: black;
+    padding-top: 10%;
+}
+
+p > a:hover {
+    color:#da35cf;
+}
